--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,19 @@
   </head>
 
   <body>
+  
+  		<% if flash[:notice] %>
+  			<p style="color: green">
+  			<%= flash[:notice] %>
+  			</p>
+  		<% end %>
+  	<% if flash[:alert] %>
+  		<p style="color: red">
+  		<%= flash[:alert] %>
+  		</p>
+  	<% end %>
+
+
     <%= yield %>
   </body>
 </html>
