--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,13 @@
 <div class="container">
-<h1>Create Event</h1>
+  <div class="row clearfix well">
+    <div class="col-md-12 column">
+        <div class="col-md-2 column">
+          <button onclick = "location.href='/events';" class="btn btn-primary btn-block" type="button">
+            Events
+          </button>
+        </div>
+    </div>
+  </div>
 </div>
 <% provide(:title, "Create Event") %>
 <%= render 'form', event: @event %>
