--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,26 +1,79 @@
-<p>
-	<strong>Title:</strong>
-  	<%= @event.title %>
-</p>
+<div class="container">
+  <div class="row clearfix well">
+    <div class="col-md-12 column">
+        <div class="col-md-2 column">
+          <button onclick = "location.href='/events';" class="btn btn-primary btn-block" type="button">
+            Events
+          </button>
+        </div>
+                 
+    </div>
+  </div>
+    <div class="row clearfix well">
+      <div class="col-md-3 column">
+        <img class="img-thumbnail" alt="FIT LOGO" src= "/fit_logo.png" width= "200" height= "200">
+      </div>
+      <div class="col-md-6 column">
+        <div class="row">
+          <table class="table">
+            <thead>
+              <tr>
+                <th> </th>
+                <th><h1> <%= @event.title %> </h1></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><h4><strong> Date of Event: </strong></h4></td>
+                <td><h4><strong><%= @event.day %>, <%= @event.month %> <%= @event.date %> <%= @event.year %> </strong></h4></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="col-md-3 column">
+        <%= image_tag @event.image, size: "200x200" %>
+      </div>
+    </div>
+    <div class="row clearfix well">
+      <center><h1> Registration </h1></center>
+      <%= form_for @participant do |f| %>
+        <%= f.hidden_field :event_id %>
+        <p>
+          <%= f.label :name %><br>
+          <%= f.text_field :name %>
+        </p>
+         <p>
+          <%= f.label :email %><br>
+          <%= f.text_field :email %>
+        </p>
+         <p>
+          <%= f.label 'Company/Organization' %><br>
+          <%= f.text_field :company %>
+        </p>
+        <p>
+          <%= f.submit 'Register'%>
+        </p>
+      <% end %>  
+    </div>
+    <div class="row clearfix well">
+      <center><h1> List of Registered Participants at <%= @event.title %></h1></center> 
+        <table class="table table-striped">
+          <tr>
+          <th> Name </th>
+          <th> Email </th>
+          <th> Company/Organization </th>
+          </tr>
 
-<p>
-  	<strong>Day:</strong>
-  	<%= @event.day %>
-</p>
+          <% @event.participants.each do |participant| %>
+            <tr>
+              <td> <%= participant.name %> </td>
+              <td> <%= participant.email %> </td>
+              <td> <%= participant.company %> </td>
+            </tr>
 
-<p>
-  	<strong>Date:</strong>
-  	<%= @event.date %>
-</p>
+          <% end %>
 
-<p>
-	<strong>Month:</strong>
-	<%= @event.month %>
-</p>
-
-<p>
-  <strong>Year:</strong>
-  <%= @event.year %>
-</p>
-
-<%= link_to 'Back', events_path %>
+        </table>  
+    </div>
+</div>
