--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -29,7 +29,7 @@
 			<%= link_to 'Edit', edit_event_path(event) %>
 			</div>
 			<div class="col-md-2 column">
-			<%= link_to 'Destroy', event_path(event), method: :delete %>
+			<%= link_to 'Delete', event_path(event), method: :delete %>
 			</div>
 		</td>
 	</tr>
