--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,14 +1,4 @@
 <div class="container">
-  <div class="row clearfix well">
-    <div class="col-md-12 column">
-        <div class="col-md-2 column">
-          <button onclick = "location.href='/events';" class="btn btn-primary btn-block" type="button">
-            Events
-          </button>
-        </div>
-                 
-    </div>
-  </div>
     <div class="row clearfix well">
       <div class="col-md-3 column">
         <img class="img-thumbnail" alt="FIT LOGO" src= "/fit_logo.png" width= "200" height= "200">
@@ -19,7 +9,7 @@
             <thead>
               <tr>
                 <th> </th>
-                <th><h1> <%= @event.title %> </h1></th>
+                <th><center><h1> <%= @event.title %> </h1></center></th>
               </tr>
             </thead>
             <tbody>
@@ -47,6 +37,8 @@
         <p>
           <%= f.submit 'Register'%>
         </p>
+        <h6><strong>Disclaimer:</strong> 
+        <i>By registering for the Event, you agree that FedEx Institute of Technology may use your email address to send Event updates and post-Event survey evaluations. </i> </h6>
       <% end %>
         </div>
       </div>
@@ -59,14 +51,12 @@
         <table class="table table-striped">
           <tr>
           <th> Name </th>
-          <th> Email </th>
           <th> Company/Organization </th>
           </tr>
 
           <% @event.participants.each do |participant| %>
             <tr>
               <td> <%= participant.name %> </td>
-              <td> <%= participant.email %> </td>
               <td> <%= participant.company %> </td>
             </tr>
 
@@ -74,8 +64,11 @@
 
         </table>  
         <p>
-          <i class="fa fa-file-excel-o" style="font-size:36px"></i>
-          <%= link_to "Export to CSV", participants_path(format: "csv") %>
+          <% if admin_signed_in? %>
+            <%= link_to "Export to CSV", participants_path(format: "csv"), :class=>"btn btn-primary", :disabled => false %>
+          <% else %>
+            <%= link_to "Export to CSV", participants_path(format: "csv"), :class=>"btn btn-primary", :disabled => true %>
+          <% end %>
         </p>
     </div>
 </div>
