--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,19 +19,20 @@
               <%= f.label :title %><br>
               <%= f.text_field :title %>
             </p>
+          <p>
+           <div class="optsel">
+              <%= f.label 'Is it a multiday event?' %><br>
+              <%= f.select :multiday, ['Yes','No'] %>
+            </div>
+          </p>
             <p>
-              <%= f.label 'Event Date' %>
-              <br>
+              <%= f.label 'Event Start Date' %><br>
+              <%= f.date_select :fromdate, :prompt => { :day => 'Day', :month => 'Month', :year => 'Year' } %>
             </p>
-            <p>
-              <%= f.select :day, ['Sunday','Monday','Tuesday','Wednesday','Thursday','Friday','Saturday'] %>
-              <%= f.select :date,[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31] %>   
-              <%= f.select :month,['January','February','March','April','May','June','July','August','September','October','November','December'] %>
-            </p>
-            <p>
-              <%= f.label :year %><br>
-              <%= f.number_field :year %>
-            </p>
+            <div class="datehide">
+              <%= f.label 'Event End Date' %><br>
+              <%= f.date_select :todate, :prompt => { :day => 'Date', :month => 'Month', :year => 'Year' }  %>  
+            </div>
             <p>
               <%= f.label :image %><br>
               <%= f.file_field :image %>
@@ -47,3 +48,14 @@
       </div>
     </div>
 </div>
+
+<script>
+  $( ".optsel" ).change(function() {
+    if ($(this).find(':selected').val() == 'No') {
+      $(".datehide").hide();
+    } 
+    else if ($(this).find(':selected').val() == 'Yes') {
+      $(".datehide").show();
+    } 
+  });
+</script>
