--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-div.field_with_errors {
+.field_with_errors {
 
   display: inline;
   color: red;
