--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,10 +17,18 @@
                 <td><h4><strong> Date of Event: </strong></h4></td>
                 <td><h4><strong><%= @event.fromdate.to_time.strftime('%a, %B %e, %Y') %></strong></h4></td>
               </tr>
+              <% if @event.description != nil%>
+              <tr>
+                <td><h4><strong> Description: </strong></h4></td>
+                <td><h4><%= @event.description %></h4></td>
+              </tr>
+              <% end %>
             </tbody>
           </table>
-          <center><h4> Please fill in the information below to register. </h4></center>
+          
       <%= form_for @participant do |f| %>
+      <% if DateTime.now <= @event.fromdate %>
+        <center><h4> Please fill in the information below to register. </h4></center>
         <%= f.hidden_field :event_id %>
         <p>
           <%= f.label :name %><br>
@@ -35,12 +43,11 @@
           <%= f.text_field :company %>
         </p>
         <p>
-        <% if DateTime.now <= @event.fromdate %>
           <%= f.submit 'Register', :disabled => false %>
           <h6><strong>Disclaimer:</strong> 
-        <i>By registering for the Event, you agree that FedEx Institute of Technology may use your email address to send Event updates and post-Event survey evaluations. </i> </h6>
+        <i>By registering for the Event, you agree that FedEx Institute of Technology may send Event updates and post-Event survey evaluations to your email. </i> </h6>
         <% else %>
-          <p class="text-danger">Cannot Register any participants. This event has already occured in the past.</p>
+          <h3><p class="text-danger">Cannot Register any participants. This event has already occured in the past.</p></h3>
         <% end %>
         </p>
       <% end %>
