--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,7 +17,7 @@
                 <td><h4><strong> Date of Event: </strong></h4></td>
                 <td><h4><strong><%= @event.fromdate.to_time.strftime('%a, %B %e, %Y') %></strong></h4></td>
               </tr>
-              <% if @event.description != nil%>
+              <% if @event.description.present? %>
               <tr>
                 <td><h4><strong> Description: </strong></h4></td>
                 <td><h4><%= @event.description %></h4></td>
