--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,7 +7,7 @@
             <%= submit_tag "Search" %>
         <% end %>
         </div>
-    <h1> List of Current Events </h1>
+    <h2> Current Events </h2>
     </div>
     <div class="col-md-12 column">
 		<table class="table table-striped">
@@ -52,8 +52,8 @@
 
 		</table>
 	</div>
-	<h1> List of Past Events </h1>
 	<div class="col-md-12 column">
+		<h2> Past Events </h2>
 		<table class="table table-striped">
 			<tr>
 				<th class="col-xs-2"> Title </th>
