--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row clearfix well">
     <!-- Carousel -->
-      <div id="mySlide" class="carousel slide" data-ride="carousel" style="width: 960px; height: 560px; margin: 0 auto">
+      <div id="mySlide" class="carousel slide" data-ride="carousel" style="width: 960px; height: 560px; margin: 0 auto" data-interval="4000">
       <!-- Indicators -->
       <ol class="carousel-indicators">
           <li data-target="#mySlide" data-slide-to="0" class="active"> </li>
