--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -21,7 +21,7 @@
 			<% @events.each do |event| %>
 			<% if DateTime.now <= event.fromdate %>
 			<tr>
-				<td style="word-wrap: break-word"> <%= event.title %> </td>
+				<td style="word-wrap: break-word"> <%= link_to event.title, event_path(event) %> </td>
 				<td> <%= event.fromdate.to_time.strftime('%D %H:%M') %> </td>
 				<% if event.todate.present? %>
 					<td> <%= event.todate.to_time.strftime('%D %H:%M') %> </td>
@@ -34,15 +34,12 @@
 					<td> <%= "N/A" %> </td>
 				<% end %>
 				<td>
-					<div class="col-md-4 column">
-					<%= link_to 'Show', event_path(event) %>
-					</div>
 					<% if admin_signed_in?%>
 						<div class="col-md-4 column">
 						<%= link_to 'Edit', edit_event_path(event) %>
 						</div>
 						<div class="col-md-4 column">
-						<%= link_to 'Delete', event_path(event), method: :delete %>
+						<%= link_to 'Delete', event_path(event), method: :delete, data: {confirm: "Are you sure you want to delete this?"}  %>
 						</div>
 					<% end %>
 				</td>
@@ -65,7 +62,7 @@
 			<% @events.each do |event| %>
 			<% if DateTime.now > event.fromdate %>
 			<tr>
-				<td style="word-wrap: break-word"> <%= event.title %> </td>
+				<td style="word-wrap: break-word"> <%= link_to event.title, event_path(event) %> </td>
 				<td> <%= event.fromdate.to_time.strftime('%D %H:%M') %> </td>
 				<% if event.todate.present? %>
 					<td> <%= event.todate.to_time.strftime('%D %H:%M') %> </td>
@@ -78,15 +75,12 @@
 					<td> <%= "N/A" %> </td>
 				<% end %>
 				<td>
-					<div class="col-md-4 column">
-					<%= link_to 'Show', event_path(event) %>
-					</div>
 					<% if admin_signed_in?%>
 						<div class="col-md-4 column">
 						<%= link_to 'Edit', edit_event_path(event) %>
 						</div>
 						<div class="col-md-4 column">
-						<%= link_to 'Delete', event_path(event), method: :delete %>
+						<%= link_to 'Delete', event_path(event), method: :delete, data: {confirm: "Are you sure?"}  %>
 						</div>
 					<% end %>
 				</td>
