--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,12 +19,15 @@
               <%= f.label :title %><br>
               <%= f.text_area :title, size: "30x3" %>
             </p>
-          <p>
-           <div class="optsel">
-              <%= f.label 'Is it a multiday event?' %><br>
-              <%= f.select :multiday, ['Yes','No'] %>
+            <div class="field">
+              <%= f.hidden_field :created_by, size: "30x3", value:"#{current_admin.email}" %>
             </div>
-          </p>
+            <p>
+             <div class="optsel">
+                <%= f.label 'Is it a multiday event?' %><br>
+                <%= f.select :multiday, ['Yes','No'] %>
+              </div>
+            </p>
             <p>
               <%= f.label 'Event Start Date' %><br>
               <%= f.date_select :fromdate, {:prompt => true, :start_year => Date.today.year, :end_year => Date.today.year + 2}, :class => 'date-field' %> <br><br>
