First testing version ready

--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row clearfix well">
   	<h2>Resend confirmation instructions</h2>
-    <div class="col-md-12 column">
+    <div class="col-sm-12 col-md-12 col-lg-12 column">
 
 		<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
 		  <%= devise_error_messages! %>
