--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row clearfix well">
-      <div class="col-md-12 column">
+      <div class="col-sm-12 col-md-12 col-lg-12 column">
 		<h2>Forgot your password?</h2>
 
 		<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
