--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,15 +1,14 @@
 <div class="container">
     <div class="row clearfix well">
-      <div class="col-md-3 column">
-        <img class="img-thumbnail" alt="FIT LOGO" src= "/fit_logo.png" width= "200" height= "200">
+      <div class="col-sm-3 col-md-3 col-lg-3 column">
+        <img class="img-thumbnail" alt="FIT LOGO" src= "/fit_logo.png" width= "180" height= "180">
       </div>
-      <div class="col-md-6 column">
-        <div class="row">
+      <div class="col-sm-6 col-md-6 col-lg-6 column">
           <table class="table">
             <thead>
               <tr>
-                <th> </th>
-                <th><center><h1> <%= @event.title %> </h1></center></th>
+              <th></th>
+                <th><center><h3> <%= @event.title %> </h3></center></th>
               </tr>
             </thead>
             <tbody>
@@ -51,12 +50,17 @@
         <% end %>
         </p>
       <% end %>
-        </div>
+      <% if admin_signed_in? %>
+        <% if current_admin.isadmin? %>
+          <%= image_tag @qr %>
+        <% end %>
+      <% end %>
       </div>
-      <div class="col-md-3 column">
-        <%= image_tag @event.image, size: "250x190" %>
+      <div class="col-sm-3 col-md-3 col-lg-3 column">
+        <%= image_tag @event.image, width: "180px", height: "165px", :style=>"float: right;" %>
       </div>
     </div>
+    <% if admin_signed_in? %>
     <div class="row clearfix well">
       <center><h1> List of Registered Participants at <%= @event.title %></h1></center> 
         <table class="table table-striped">
@@ -75,8 +79,7 @@
 
         </table>  
         <p>
-          <% if admin_signed_in? %>
-            <% if (@event.created_by == current_admin.email) || (current_admin.email == 'rbhttrai@memphis.edu') %>
+            <% if (@event.created_by == current_admin.email) || (current_admin.isadmin?) %>
               <%= link_to "Export to CSV", participants_path(format: "csv"), :class=>"btn btn-primary", :disabled => false %>
             <% end %>
           <% end %>
