--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>Signup</title>
@@ -11,18 +10,19 @@
   <body>
   <div class="container">
     <div class="row clearfix well">
-      <div class="col-md-12 column">
-        <div class="col-md-4 column">
-          <%= link_to 'Home', root_path, :class=>"btn btn-primary", :style=>"margin-right: 16px"%>
-          <%= link_to 'Events', events_path, :class=>"btn btn-primary", :style=>"margin-right: 16px"%>
-
+      <div class="col-sm-12 col-md-12 col-lg-12 column">
+        <div class="col-sm-4 col-md-4 col-lg-4 column">
+          <%= link_to 'Home', root_path, :class=>"btn btn-primary", :style=>"margin-right: 1em"%>
+          <%= link_to 'Events', events_path, :class=>"btn btn-primary", :style=>"margin-right: 1em"%>
         </div>
+          <div class="col-sm-8 col-md-8 col-lg-8 column">
        		<% if admin_signed_in? %>
-            <%= link_to 'Logout', destroy_admin_session_path, method: :delete , :class=>"btn btn-primary", :style=>"float: right; margin-right: 16px"%>
-            <%= link_to 'Change Password', edit_admin_registration_path, :class=>"btn btn-primary", :style=>"float: right; margin-right: 16px"%>
+            <%= link_to 'Logout', destroy_admin_session_path, method: :delete , :class=>"btn btn-primary", :style=>"float: right; margin-right: 1em"%>
+            <%= link_to 'Change Password', edit_admin_registration_path, :class=>"btn btn-primary", :style=>"float: right; margin-right: 1em"%>
             <% else %>
               <a href="/admins/signin"><i class="fa fa-user fa-2x pull-right" aria-hidden="true"></i> </a>       
           <% end %>
+          </div>
         </div>
       </div>          
 
