--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row clearfix well">
+  <center><h2><strong>EVENTS AT FEDEX INSTITUTE OF TECHNOLOGY</strong></h2></center>
+   <div class="col-sm-12 col-md-12 col-lg-12 column">
+  <center>
     <!-- Carousel -->
-      <div id="mySlide" class="carousel slide" data-ride="carousel" style="width: 960px; height: 560px; margin: 0 auto" data-interval="4000">
+      <div id="mySlide" class="carousel slide" data-ride="carousel" style="width: 600px; height: 400px; margin: 0 auto" data-interval="4000">
       <!-- Indicators -->
       <ol class="carousel-indicators">
           <li data-target="#mySlide" data-slide-to="0" class="active"> </li>
@@ -11,17 +14,26 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
           <div class="item active">
-            <img src="faa-front-slide.jpg" alt="First slide" style="width: 960px; height: 560px;">
+            <img src="first.jpg" alt="First slide" style="width: 600px; height: 400px;" class="center-block img-responsive">
           </div>
           <div class="item">
-            <img src="astronomy.jpg" alt="Second slide" style="width: 960px; height: 560px;">
+            <img src="second.jpg" alt="Second slide" style="width: 600px; height: 400px;" class="center-block img-responsive">
           </div>
           <div class="item">
-            <img src="mib.png" alt="Third slide" style="width: 960px; height: 560px;">
+            <img src="third.jpg" alt="Third slide" style="width: 600px; height: 400px;" class="center-block img-responsive">
           </div>
       </div>
       <!-- Controls -->
     </div><!-- /carousel -->
+    </center>
+    </div>
+    <div class="col-sm-1 col-md-1 col-lg-1 column">
+    </div>
+      <div class="col-sm-10 col-md-10 col-lg-10 column">
+        <h2><strong> <i> GOING BEYOND THE EDGE </i></strong></h2>
+        <p>Cities want to be on the leading edge. Companies want to stay on the cutting edge. And everyone, it seems, is looking for the competitive edge. But to achieve these goals, somebody has to go beyond the edge, into unknown territory to explore new possibilities, make new discoveries, and develop the next generation of emerging technologies. This is the work of the FedEx Institute of Technology at the University of Memphis: ADVANCING THE SCIENCE OF WHAT'S NEXT.
+        </p>
+      </div>
   </div>
 </div>
 
